<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/txt_notify_alarm"
        app:iconSpaceReserved="false">
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/txt_key_reminder_daily"
            android:summary="@string/txt_summary_reminder_daily"
            android:title="@string/txt_title_reminder_daily"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="@string/txt_key_reminder_new_movie"
            android:summary="@string/txt_summary_remind_new_movie"
            android:title="@string/txt_title_reminder_new_movie"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/txt_title_category_general"
        app:iconSpaceReserved="false">
        <Preference
            android:key="@string/txt_key_change_language"
            android:summary="@string/txt_summary_change_language"
            android:title="@string/txt_change_language"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
